// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`python-appservice-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy Python (Flask/Django/FastAPI) code to Azure App Service Linux. WHEN: "Flask App Service", "Django App Service", "FastAPI App Service", "deploy Python to App Service". DO NOT USE FOR: Container Apps, Functions, non-Python, Terraform/Bicep/IaC, full infra — use azure-prepare.",
  "extractedKeywords": [
    "aks",
    "app service",
    "apps",
    "appservice",
    "azure",
    "azure-prepare",
    "bicep",
    "cli",
    "code",
    "container",
    "deploy",
    "django",
    "fastapi",
    "flask",
    "full",
    "function",
    "functions",
    "infra",
    "key vault",
    "linux",
    "mcp",
    "non-python",
    "python",
    "service",
    "terraform",
    "vnet",
    "when",
  ],
  "name": "python-appservice-deploy",
}
`;

exports[`python-appservice-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "app service",
  "apps",
  "appservice",
  "azure",
  "azure-prepare",
  "bicep",
  "cli",
  "code",
  "container",
  "deploy",
  "django",
  "fastapi",
  "flask",
  "full",
  "function",
  "functions",
  "infra",
  "key vault",
  "linux",
  "mcp",
  "non-python",
  "python",
  "service",
  "terraform",
  "vnet",
  "when",
]
`;
